# legobots

./: README.md
beltbot/: rust-toolchain.toml
beltbot/beltbot-firmware/: Cargo.toml
beltbot/beltbot-firmware/src/: main.rs
beltbot/beltbot-remote/: Cargo.toml  memory.x
beltbot/beltbot-remote/src/: main.rs
botlib/: Cargo.toml
botlib/src/: lib.rs  motor.rs  servo.rs
carbot/car/: Cargo.toml  memory.x
carbot/car/src/: main.rs
carbot/remote/: settings.gradle.kts
carbot/remote/app/: build.gradle.kts
carbot/remote/app/src/androidTest/java/no/lulf/carbot/remote/: ExampleInstrumentedTest.kt
carbot/remote/app/src/main/: AndroidManifest.xml
carbot/remote/app/src/main/java/no/lulf/carbot/remote/: BluetoothConnection.kt  GameActivity.kt  MainActivity.kt
carbot/remote/app/src/main/java/no/lulf/carbot/remote/ui/theme/: Color.kt  Theme.kt  Type.kt
carbot/remote/app/src/main/res/layout/: activity_control_buttons.xml
carbot/remote/app/src/main/res/values/: strings.xml  themes.xml
carbot/remote/app/src/test/java/no/lulf/carbot/remote/: ExampleUnitTest.kt
carbot/remote/gradle/wrapper/: gradle-wrapper.properties
classifier/: classifier.py
firmware/: Cargo.toml
firmware/legofruit/trainbot-remote/src/: main.rs
firmware/legofruit/trainbot/application/: README.adoc
firmware/src/: main.rs
hardware/legofruit/legofruit/: feather.kicad_sym  fp-info-cache  fp-lib-table  legofruit.kicad_pcb  legofruit.kicad_prl  legofruit.kicad_pro  legofruit.kicad_sch  sym-lib-table
hardware/legofruit/legofruit/JS102011JCQN/: JS102011JCQN.lib  SW_JS102011JCQN.kicad_mod
hardware/legofruit/legofruit/feather.pretty/: feather_header_12pin.kicad_mod  feather_header_16pin.kicad_mod  feather_header_smd.kicad_mod  sparkfun_motor.kicad_mod
hardware/legofruit/legofruitv2/: legofruitv2.kicad_pcb  legofruitv2.kicad_prl  legofruitv2.kicad_pro  legofruitv2.kicad_sch
oldsortbot/classifier/: convert.py
oldsortbot/firmware/src/: main.rs
sortbot/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
sortbot/.cargo/: config.toml
sortbot/classifier/: classifier.py
sortbot/firmware/src/: main.rs
sortbot/sortbot/application/: Cargo.toml  README.adoc
sortbot/sortbot/bootloader/: Cargo.toml
sortbot/src/: main.rs
trainbot/trainbot-firmware/: Cargo.toml
trainbot/trainbot-remote/: Cargo.toml
trainbot/trainbot-remote/src/: main.rs
trainbot/trainbot/application/: Cargo.toml  README.adoc
trainbot/trainbot/application/src/: main.rs
