[package]
edition = "2021"
name = "botlib"
version = "0.1.0"
description = "Library for bots"
resolver = "2"

[dependencies]
defmt = "0.3"
heapless = "0.7"
embassy-nrf = { version = "0.1.0", default-features = false, features = ["gpiote"]}
embassy-sync = { version = "0.1.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }

[features]
nrf52840 = ["embassy-nrf/nrf52840"]
nrf52833 = ["embassy-nrf/nrf52833"]
