[package]
edition = "2021"
name = "beltbot-firmware"
version = "0.1.0"
keywords = ["nrf52840", "nrf", "nrf52", "dfu", "ble"]
resolver = "2"

[dependencies]
defmt = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

drogue-device = { version = "0.1.0", default-features = false, features = ["time", "dfu", "ble+nrf-sofdevice"] }

embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
embassy = { version = "0.1.0", default-features = false, features = [] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "gpiote", "time-driver-rtc1"]}

botlib = { path = "../../../botlib", features = ["nrf52840"] }

cortex-m    = { version = "0.7.2" }
cortex-m-rt = "0.7"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s140", "nrf52840"] }
nrf-softdevice-s140 = { version = "0.1.0" }
nrf-softdevice-defmt-rtt = { version = "0.1.0", optional = true }

[features]
default = [
    "panic-reset"
]
debug = [
    "panic-probe",
    "drogue-device/defmt",
    "nrf-softdevice/defmt",
    "embassy/defmt",
    "embassy-nrf/defmt",
    "embassy-boot-nrf/defmt",
    "nrf-softdevice-defmt-rtt",
]
