[package]
edition = "2021"
name = "beltbot-firmware"
version = "0.1.0"
keywords = ["nrf52840", "nrf", "nrf52", "dfu", "ble"]
resolver = "2"

[dependencies]
defmt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "nightly"] }
embassy-sync = { version = "0.1.0", default-features = false }
embassy-time = { version = "0.1.0", default-features = false }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}

botlib = { path = "../../botlib", features = ["nrf52840"] }

cortex-m    = { version = "0.7" }
cortex-m-rt = "0.7"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }
static_cell = "1"

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s140", "nrf52840", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.0" }

[features]
default = [
    "panic-reset"
]
debug = [
    "panic-probe",
    "nrf-softdevice/defmt",
    "embassy-executor/defmt",
    "embassy-nrf/defmt",
    "embassy-boot-nrf/defmt",
]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
#embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "d159a6c62d09155261c14edec69dc9dd9e662a92"}
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f"}
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f"}
